allow STAKE_POOL_PROGRAM_ID override with env variable

--- a/clients/js-legacy/package.json
+++ b/clients/js-legacy/package.json
@@ -51,6 +51,7 @@
     "bn.js": "^5.2.0",
     "buffer": "^6.0.3",
     "buffer-layout": "^1.2.2",
+    "dotenv": "^17.2.1",
     "superstruct": "^2.0.2"
   },
   "devDependencies": {
