--- a/clients/js-legacy/package.json
+++ b/clients/js-legacy/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@solana/spl-stake-pool",
-  "version": "1.1.8",
+  "name": "@x1-labs/spl-stake-pool",
+  "version": "1.1.10",
   "description": "SPL Stake Pool Program JS API",
   "scripts": {
     "build": "tsc && cross-env NODE_ENV=production rollup -c",
